--- a/skins/laika/src/scss/variables.scss
+++ b/skins/laika/src/scss/variables.scss
@@ -38,6 +38,10 @@ $custom-colors: (
 		"gray-very-light": ($fun-color-gray-very-light),
 );
 
+// 320px is the smallest assumed mobile size, minus 2 x column gap (18px).
+// We don't use calc(100vw-36px) for compat reasons
+$fun-smallest-width: 284px;
+
 //
 // Overriding Bulma variables
 //
